@@ -10,7 +10,6 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
 import com.festago.fcm.domain.MemberFCM;
-import com.festago.fcm.dto.MemberFCMResponse;
 import com.festago.fcm.repository.MemberFCMRepository;
 import com.festago.member.repository.MemberRepository;
 import java.util.List;
@@ -39,22 +38,22 @@ class MemberFCMServiceTest {
     @Test
     void 유저의_FCM_정보를_가져온다() {
         // given
-        List<MemberFCM> memberFCMS = List.of(
+        List<MemberFCM> memberFCMs = List.of(
             new MemberFCM(1L, 1L, "token"),
             new MemberFCM(2L, 1L, "token2")
         );
         given(memberFCMRepository.findByMemberId(anyLong()))
-            .willReturn(memberFCMS);
+            .willReturn(memberFCMs);
 
-        List<MemberFCMResponse> expect = memberFCMS.stream()
-            .map(MemberFCMResponse::from)
-            .collect(Collectors.toList());
+        List<String> expect = memberFCMs.stream()
+            .map(MemberFCM::getFcmToken)
+            .toList();
 
         // when
-        List<MemberFCMResponse> actual = memberFCMService.findMemberFCM(1L).memberFCMs();
+        List<String> actual = memberFCMService.findMemberFCMTokens(1L);
 
         // then
-        assertThat(actual).isEqualTo(expect);
+        assertThat(actual).containsAll(expect);
     }
 
     @Test
